2019-1/221/users/4118/executions/1654_652.log
== TEST (2019-04-07 17:19:38) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d = 0):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 3
    if(n%d = 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:19:58) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:20:05) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.19122
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
sim
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:20:31) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:20:39) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:20:40) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.118521
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:21:09) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.162606
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:21:28) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:22:00) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:22:54) 
-- CODE:
n = int(input( "Digite um numero inteiro de 3 digitos: "))
d = n//100
if(n%d == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
